# ML-Research

./: README.md  research.aux  research.out  research.tex
Project/compare_all/: compare_all_test.py  compare_models.py
Project/cpp/: CMakeLists.txt  compare_metrics.py  nids  nids.cpp  serve.cpp  train_nids.cpp
Project/cpp/models/: mlp_nids_cpp_metadata.json  rf_nids_cpp_metadata.json  svm_nids_cpp_preprocessing_params.json
Project/data/: comparison_summary.txt  metrics.json  metrics_summary.txt  metrics_summary_cpp.txt  metrics_test.json
Project/load_test/: compare_metrics.py  run_cpp_services.sh  run_python_services.sh  test_inference.py  test_inference_cpp.py
Project/load_test/models/: mlp_nids_cpp_weights.json  rf_nids_cpp_weights.json  svm_nids_cpp_metadata.json  svm_nids_cpp_weights.json
Project/load_test/payloads/: attack.json  safe.json
Project/models/: lgbm_nids.pkl  lgbm_nids_metadata.json  lgbm_nids_preprocessors.pkl  mlp_nids.onnx  mlp_nids.pkl  mlp_nids_metadata.json  rf_nids.onnx  rf_nids.pkl  rf_nids_metadata.json  svm_nids.pkl  svm_nids_metadata.json  xgb_nids.pkl  xgb_nids_metadata.json  xgb_nids_preprocessing_params.json
Project/python/: app_nids.py  compare_metrics.py  train_nids.py
